# todotxt-tui

./: .debug-config.lua  .gitignore  Cargo.toml  LICENSE  README.md  aux.sh  book.toml  build.rs  cli-help.md  config.toml  test.sh  todo-new.conf  todo-tui.toml  todo.conf  todo.txt
.cargo/: config.toml
.github/workflows/: check.yml  documentation.yml  release.yml
book/: 404.html  configuration.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js  usage.html
doc/: SUMMARY.md  about.md  configuration.md  file_formats.md  installation.md  synchronization.md  usage.md
doc/configuration/: colors.md  file_worker.md  hooks.md  index.md  styles.md  todo_list.md  ui.md
doc/configuration/widget/: index.md  list.md  preview.md
macros/: Cargo.toml
macros/src/: impl_conf.rs  impl_conf_functions.rs  impl_conf_merge.rs  lib.rs
resources/test/: test_load.conf  todo-tui.conf
src/: config.rs  error.rs  file_format.rs  file_worker.rs  layout.rs  lib.rs  main.rs  todo.rs  ui.rs  utils.rs  widget.rs
src/config/: active_color_config.rs  colors.rs  conf.rs  configs.rs  defaults.rs  export.rs  file_worker_config.rs  keycode.rs  list_config.rs  logger.rs  options.rs  parsers.rs  preview_config.rs  styles.rs  text_modifier.rs  text_style.rs  todo_config.rs  traits.rs  ui_config.rs  widget_base_config.rs
src/file_format/: ical.rs  todotxt.rs
src/file_worker/: file_format.rs
src/file_worker/file_format/: ical.rs  todotxt.rs
src/layout/: container.rs  grammar.pest  render_trait.rs  widget.rs  widget_state.rs  widget_type.rs
src/layout/container/: holder.rs  item.rs
src/layout/widget/: state_categories.rs  state_input.rs  state_list.rs  state_preview.rs  widget_base.rs  widget_list.rs  widget_state.rs  widget_trait.rs  widget_type.rs
src/todo/: autocomplete.rs  category_list.rs  hooks.rs  parser.rs  search.rs  state.rs  task_container.rs  task_list.rs  todo_state.rs  version.rs
src/todo/parser/: grammar.pest  line.rs  line_block.rs  parts.rs
src/ui/: handle_event_trait.rs  popup.rs  ui_event.rs  ui_state.rs
src/ui/ui_event/: event_entry.rs
test_files/: todo.txt
tests/: config.rs  config_clap.rs
tests/common/: mod.rs
tests/files/: hook.sh  test_behaviour_todo.txt  testing_config.toml  todotxt-tui.toml
tests/files/todotxt-tui/: log4rs.yaml  todo.ics  todo.txt  todotxt-tui.toml
tests/files/todotxt-tui/hooks/: pre_new_task.sh
todotxt-tui-macros/: Cargo.toml
todotxt-tui-macros/src/: impl_conf.rs  impl_conf_functions.rs  impl_conf_merge.rs  lib.rs
