[package]
name = "todotxt-tui"
version = "0.2.2"
edition = "2021"
authors = ["Jiří Alexanrovič"]
license = "MIT"
keywords = ["tui", "todolist", "ratatui"]
readme = "README.md"
categories = ["command-line-utilities"]
description = "Todo.txt TUI is a highly customizable terminal-based application for managing your todo tasks. It follows the todo.txt format and offers a wide range of configuration options to suit your needs."
repository = "https://github.com/Fanteria/todotxt-tui"

[dependencies]
todotxt-tui-macros = { version = "0.1.0", path = "todotxt-tui-macros/" }
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "wrap_help", "env"] }
clap_complete = "4.4"
crossterm = { version = "0.28", features = ["serde"] }
enum_dispatch = "0.3"
log = "0.4"
log4rs = "1.2"
notify = "6.0"
regex = { version = "1.3", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
todo-txt = "3.1"
toml = "0.8"
tui = { package = "ratatui", version = "0.29", features = ["all-widgets", "crossterm"]}
tui-input = { version = "0.10", features = ["crossterm"], default-features = false }
thiserror = "1.0"
twelf = { version = "0.15", default-features = false, features = ["toml", "env", "clap"] }
shellexpand = "3.1"

[dev-dependencies]
test-log = "0.2"
env_logger = "0.11"
pretty_assertions = "1.4"

